--- a/index.html
+++ b/index.html
@@ -6,29 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="./css/styles.css"> -->
+    <!--  <link rel="stylesheet" href="./css/styles.css">  -->  
+
     <title>styled jumbotron coby/github </title>
+
   </head>
+
   <body>
+
     <nav class="bg-danger m-0">
+      <br>
+      <br>
+      <br>
       <div class="container">
         <ul class="list-inline mb-0">
+
           <li class="list-inline-item">
             <a href="" class="text-decoration-none text-success">Home</a>
           </li>
+
           <li class="list-inline-item">
             <a href="" class="text-decoration-none text-success">Info</a>
           </li>
+
           <li class="list-inline-item">
             <a href="" class="text-decoration-none text-success">Contact</a>
           </li>
+
         </ul>
       </div>
     </nav>
+
     <section class="bg-dark text-light py-4 bg-gradient m-0">
       <div class="container jumbotron">
-        <h1 class="display-1 text-center">This Is My Jumbotron</h1>
-        <h2 class="text-muted">Or is it....</h2>
+        <h1 class="display-1 text-center">This Is My Gabe's DRAFT COPYCAT Jumbotron</h1>
+        <h2 class="text-muted">Or is it....(yes it is)</h2>
         <p class="lead">Now, let's style the rest of this jumbotron using some Bootstrap Utility Classes.</p>
         <p>Classes to use for this are:</p>
         <div class="container">
@@ -66,5 +78,6 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  
   </body>
 </html>
