title page change

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <section class="bg-dark text-light py-4 bg-gradient m-0">
       <div class="container jumbotron">
-        <h1 class="display-1 text-center">This Is My Gabe's DRAFT COPYCAT Jumbotron</h1>
+        <h1 class="display-1 text-center">This Is Gabe's DRAFT COPYCAT Jumbotron</h1>
         <h2 class="text-muted">Or is it....(yes it is)</h2>
         <p class="lead">Now, let's style the rest of this jumbotron using some Bootstrap Utility Classes.</p>
         <p>Classes to use for this are:</p>
